<resources>
    <string name="app_name">BMI計算機</string>
    <string name="bt_clear">クリア</string>
    <string name="bt_calculation">計算</string>
    <string name="tv_age">年齢</string>
    <string name="tv_age2">歳</string>
    <string name="tv_height">身長</string>
    <string name="tv_height2">cm</string>
    <string name="tv_weight">体重</string>
    <string name="tv_weight2">kg</string>
    <string name="dialog_btn_ok">確認</string>
    <string name="dialog_title">警告</string>
    <string name="dialog_msg">適切な肥満度を求めるためには、6歳未満の場合はカウプ指数が、
        6歳から１５歳まではローレル指数が使われます。本アプリはBMIのみに対応しています。</string>
</resources>