<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBestWeight"
        android:layout_width="188dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Degree2" />

    <TextView
        android:id="@+id/tv_Degree2"
        android:layout_width="182dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBMI" />

    <Button
        android:id="@+id/bt_Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_clear"
        android:shape="rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_Calculation"
        android:layout_width="271dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_calculation"
        android:shape="rectangle"
        app:layout_constraintBottom_toTopOf="@+id/bt_Clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_weight"
        app:layout_constraintBaseline_toBaselineOf="@+id/etWeight"
        app:layout_constraintEnd_toStartOf="@+id/etWeight" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="383dp" />

    <TextView
        android:id="@+id/tv_Weight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_weight2"
        app:layout_constraintBaseline_toBaselineOf="@+id/etWeight"
        app:layout_constraintStart_toEndOf="@+id/etWeight" />

    <TextView
        android:id="@+id/tv_Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_height"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHeight"
        app:layout_constraintEnd_toStartOf="@+id/etHeight" />

    <TextView
        android:id="@+id/tv_Height2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_height2"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHeight"
        app:layout_constraintStart_toEndOf="@+id/etHeight" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="147dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_age"
        app:layout_constraintBaseline_toBaselineOf="@+id/etAge"
        app:layout_constraintEnd_toStartOf="@+id/etAge" />

    <TextView
        android:id="@+id/tv_Age2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_age2"
        app:layout_constraintBaseline_toBaselineOf="@+id/etAge"
        app:layout_constraintStart_toEndOf="@+id/etAge" />

    <TextView
        android:id="@+id/tv_Degree"
        android:layout_width="182dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBMI"
        android:layout_width="247dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Degree" />

    <TextView
        android:id="@+id/tv_kg"
        android:layout_width="29dp"
        android:layout_height="25dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvBestWeight"
        app:layout_constraintStart_toEndOf="@+id/tvBestWeight" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="158dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/etWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/bt_Calculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>